<resources>
    <string name="app_name">KnowTheSnow</string>
    <string name="mt_hood">Mount Hood</string>
    <string name="mt_adams">Mount Adams</string>
    <string name="mt_st_helens">Mount St. Helens</string>
    <string name="mt_rainier">Mount Rainier</string>
    <string name="mt_bachelor">Mount Bachelor</string>
    <string name="mt_shasta">Mount Shasta</string>

    <string name="category_weather">Weather</string>
    <string name="category_snow_level">Snow</string>
    <string name="category_avalanche">AvyRisk</string>
    <string name="category_cam">Cams</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Default text to show with the earthquake location ("Near the Pacific-Antarctic Ridge")
         if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="near_the">Near the</string>

    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_earthquakes">No earthquakes found.</string>

</resources>
